feat: update project codebase
- Backend: Spring Boot application updates
- Frontend: Angular component improvements
- General: Code quality and performance enhancements